manifests/showks-canvas-demoaccount-4/manifest.yaml
---
# Source: showks-canvas/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: showks-canvas-demoaccount-4
  namespace: showks
  labels:
    app: showks-canvas-demoaccount-4
    class: showks-canvas
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: app-port
  selector:
    app: showks-canvas-demoaccount-4

---
# Source: showks-canvas/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: showks-canvas-demoaccount-4
  namespace: showks
  labels:
    app: showks-canvas-demoaccount-4
    class: showks-canvas
spec:
  replicas: 1
  selector:
    matchLabels:
      app: showks-canvas-demoaccount-4
  template:
    metadata:
      labels:
        app: showks-canvas-demoaccount-4
        class: showks-canvas
    spec:
      containers:
        - name: showks-canvas-demoaccount-4
          image: gcr.io/ipc-containerdays/showks-canvas-demoaccount-4:prod-7c4f8198c7c406b004e530509d8833fd03970d9f
          ports:
            - name: app-port
              containerPort: 8080
              protocol: TCP

---
# Source: showks-canvas/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: showks-canvas-demoaccount-4
  namespace: showks
  labels:
    class: showks-canvas
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: showks-canvas-demoaccount-4.prod.showks.containerdays.jp
    http:
      paths:
      - path: /
        backend:
          serviceName: showks-canvas-demoaccount-4
          servicePort: 8080
